--- a/analysis/big_graph_real.ipynb
+++ b/analysis/big_graph_real.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "\n",
     "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +107,7 @@
        "4           1984.0     33.28      2.10     14.27         0.70   4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
        " 4           1984.0    Sales_NA  33.28 -100   45, (148, 5))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
     "    'Sales_NA': (-100, 45),\n",
     "    'Sales_EU': (15, 50),\n",
     "    'Sales_JP': (140, 37),\n",
-    "    'Sales_Other': (50, -25)\n",
+    "    'Sales_Other': (60, -25)\n",
     "}\n",
     "GPS = melt_data.loc[:, 'GeoLocation'].map(GeoMap)\n",
     "melt_data['Lon'] = GPS.map(lambda x: x[0])\n",
@@ -165,19 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~atlasgcx/85.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~atlasgcx/85.embed\" height=\"600px\" width=\"900px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +193,7 @@
     "        visible=False,\n",
     "        lon = df_sub['Lon'],\n",
     "        lat = df_sub['Lat'],\n",
-    "        text = df_sub['GeoLocation'],\n",
+    "        text = df_sub['Sales'],\n",
     "        marker = dict(\n",
     "            size = df_sub['Sales'] * 3,\n",
     "            color = ['rgb(215,25,28)', 'rgb(253,174,97)', 'rgb(26,150,65)', 'rgb(44,123,182)'],\n",
@@ -210,6 +211,7 @@
     "for i in range(len(yearly)):\n",
     "    step = dict(\n",
     "        method = 'restyle',\n",
+    "        label = str(i + 1980),\n",
     "        args = ['visible', [False] * len(yearly)],\n",
     "    )\n",
     "    step['args'][1][i] = True # Toggle i'th trace to \"visible\"\n",
@@ -217,19 +219,27 @@
     "    \n",
     "sliders = [dict(\n",
     "    active = 5,\n",
-    "    currentvalue = {\"prefix\": \"Year since 1980: \"},\n",
+    "    currentvalue = {\"prefix\": \"Year: \"},\n",
     "    pad = {\"t\": 0},\n",
     "    steps = steps\n",
     ")]\n",
     "\n",
     "layout = dict(sliders=sliders,\n",
     "              title='Total Sales by year in each Region',\n",
-    "              xaxis=dict(title='Year'))\n",
+    "              xaxis=dict(title='Year'),\n",
+    "              width=900, height=600)\n",
     "\n",
     "fig = dict(data=yearly, layout=layout)\n",
     "\n",
     "py.iplot(fig, filename='Sine Wave Slider')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
